--- a/style.html
+++ b/style.html
@@ -2618,13 +2618,21 @@
             background: color-mix(in srgb, var(--primary-color) 12%, transparent);
         }
         .wizard-signature-canvas {
-            width: 837%;
+            display: block;
+            width: 100%;
+            max-width: 100%;
+            min-width: 100%;
             height: 150px;
+            min-height: 150px;
             background: #fff;
             border: 1px solid color-mix(in srgb, var(--primary-color) 35%, transparent);
             border-radius: 10px;
             cursor: crosshair;
             touch-action: none;
+        }
+        .mov-signature-area .wizard-signature-canvas {
+            height: 220px;
+            min-height: 220px;
         }
         .final-signature-dialog .wizard-signature-area {
             padding: 14px;
@@ -3031,7 +3039,7 @@
         .mov-signature-area {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: stretch;
             gap: 10px;
         }
         .wizard-signature-actions {
