Ajusta feedback visual do modal de movimentação

--- a/style.html
+++ b/style.html
@@ -1877,6 +1877,13 @@
             margin-top: auto;
             border-top: 1px solid color-mix(in srgb, var(--dark-color) 6%, transparent);
         }
+        .mov-signature-wrapper .form-actions {
+            background: transparent;
+            border-top: none;
+            padding-top: 6px;
+            padding-bottom: 6px;
+            margin-top: 8px;
+        }
         .modal-actions {
             display: flex;
             justify-content: flex-end;
@@ -2876,16 +2883,16 @@
             border-color: color-mix(in srgb, var(--primary-color) 60%, transparent);
         }
         .mov-tab-entrada.active {
-            background: linear-gradient(145deg, color-mix(in srgb, #1ba97a 30%, white 70%), color-mix(in srgb, #1ba97a 10%, white 90%));
-            color: #0f7252;
-            border-color: color-mix(in srgb, #1ba97a 70%, transparent);
-            box-shadow: 0 10px 24px color-mix(in srgb, #1ba97a 25%, transparent);
+            background: color-mix(in srgb, #1ba97a 24%, white 76%);
+            color: color-mix(in srgb, #0f7252 82%, var(--text-color));
+            border-color: color-mix(in srgb, #1ba97a 55%, transparent);
+            box-shadow: 0 12px 26px color-mix(in srgb, #1ba97a 22%, transparent);
         }
         .mov-tab-saida.active {
-            background: linear-gradient(145deg, color-mix(in srgb, #d64545 30%, white 70%), color-mix(in srgb, #d64545 10%, white 90%));
-            color: #8b1c1c;
-            border-color: color-mix(in srgb, #d64545 70%, transparent);
-            box-shadow: 0 10px 24px color-mix(in srgb, #d64545 25%, transparent);
+            background: color-mix(in srgb, #d64545 22%, white 78%);
+            color: color-mix(in srgb, #8c1f1f 85%, var(--text-color));
+            border-color: color-mix(in srgb, #d64545 58%, transparent);
+            box-shadow: 0 12px 26px color-mix(in srgb, #d64545 22%, transparent);
         }
         .mov-tab-panel {
             display: none;
@@ -3055,10 +3062,10 @@
         }
         .mov-theme-saida .modal-content,
         .modal-content.mov-theme-saida {
-            background: radial-gradient(circle at 20% 18%, rgba(10, 110, 90, 0.12), transparent 34%),
-                linear-gradient(180deg, #f7fbfa 0%, #eaf4f1 100%);
-            border-color: color-mix(in srgb, #0a6e5a 60%, var(--border-color));
-            box-shadow: 0 18px 40px rgba(10, 110, 90, 0.16);
+            background: radial-gradient(circle at 18% 18%, rgba(214, 69, 69, 0.14), transparent 36%),
+                linear-gradient(180deg, #fdf7f7 0%, #f7eded 100%);
+            border-color: color-mix(in srgb, #d64545 62%, var(--border-color));
+            box-shadow: 0 18px 40px rgba(214, 69, 69, 0.18);
         }
         .movimentacao-item-row {
             display: grid;
