--- a/style.html
+++ b/style.html
@@ -3673,6 +3673,9 @@
             border: 1px solid color-mix(in srgb, var(--dark-color) 6%, transparent);
             z-index: 3600;
         }
+        .notification-panel.is-open {
+            display: block;
+        }
         .notification-header {
             padding: 18px 20px;
             border-bottom: 1px solid var(--border-color);
