--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
         </div>
     </div>
     <!-- Painel de Notificações -->
-    <div class="notification-panel" id="notification-panel">
+    <div class="notification-panel" id="notification-panel" aria-hidden="true">
         <div class="notification-header">
             Notificações
         </div>
