--- a/style.html
+++ b/style.html
@@ -1017,7 +1017,8 @@
         }
         .login-feedback.is-loading::before {
             opacity: 1;
-            animation: pulse 0.8s ease-in-out infinite;
+            transform: scale(1);
+            animation: none;
             background: linear-gradient(135deg, #2563eb, #38bdf8);
         }
         .login-feedback.is-error {
@@ -1364,8 +1365,9 @@
             position: absolute;
             inset: 0;
             background: linear-gradient(90deg, transparent 0%, rgba(255,255,255,0.16) 50%, transparent 100%);
-            transform: translateX(-100%);
-            animation: skeleton-shimmer 1.4s ease-in-out infinite;
+            transform: translateX(0);
+            animation: none;
+            opacity: 0.6;
         }
         .skeleton-line,
         .skeleton-block,
